--- a/doan_huynh/doan_huynh.vcxproj.filters
+++ b/doan_huynh/doan_huynh.vcxproj.filters
@@ -15,15 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="toan.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="phanso.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="toan.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="phanso.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
