--- a/doan_huynh/doan_huynh.vcxproj
+++ b/doan_huynh/doan_huynh.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.c" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="phanso.cpp" />
     <ClCompile Include="toan.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="phanso.h" />
     <ClInclude Include="toan.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
