--- a/doan_huynh/doan_huynh.vcxproj
+++ b/doan_huynh/doan_huynh.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main.c" />
     <ClCompile Include="toan.c" />
   </ItemGroup>
   <ItemGroup>
