--- a/doan_huynh/doan_huynh.vcxproj
+++ b/doan_huynh/doan_huynh.vcxproj
@@ -127,8 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="toan.c" />
+    <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="phanso.h" />
